Chore: Replace `XMLConfig` with `GlobalConfig` in `GlobalSettings` and update exception handling